Modification des routes d'authentification pour respecter la spec + correction spec
