# backend/routes/authentication.js
@@ -9,7 +9,7 @@ router.post('/register', (req, res) => {
   const {email, password} = req.body;
   bcrypt.hash(password, saltPasses)
     .then(hash => userService.createUser(email, hash))
-    .then(user => res.send({email: user.email}))
+    .then(user => res.status(201).send({email: user.email}))
     .catch(err => res.status(409).send(err));
 });
 
@@ -17,17 +17,21 @@ router.post('/login', (req, res) => {
   const {email, password} = req.body;
   userService.getUserByEmail(email)
     .then(user => {
-      return bcrypt.compare(password, user.password)
-        .then(match => {
-          if (match) {
-            req.session.userId = user._id;
-            res.status(200).send({email: user.email});
-          } else {
-            return Promise.reject(new Error('Wrong password'));
-          }
-        });
+      if (user) {
+        return bcrypt.compare(password, user.password)
+          .then(match => {
+            if (match) {
+              req.session.userId = user._id;
+              res.send({email: user.email});
+            } else {
+              res.status(401).end();
+            }
+          });
+      } else {
+        res.status(401).end();
+      }
     })
-    .catch(err => res.status(401).send(err));
+    .catch(err => res.status(500).end());
 });
 
 router.post('/logout', (req, res) => {
